--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,17 @@
 API_BASE_URL: https://api.groq.com/openai/v1/
 INTERNET_ACCESS: true # Set to true to enable internet access
-MAX_SEARCH_RESULTS: 4 # Set the maximum search results for internet access DONT SET TOO HIGH
+MAX_SEARCH_RESULTS: 6 # Set the maximum search results for internet access DONT SET TOO HIGH
+
+# Local LM Studio model settings
+USE_LOCAL_MODEL: true # Set to true to use local LM Studio model instead of remote API
+LOCAL_MODEL_HOST: 172.29.160.1 # Direct IP address of Windows host running LM Studio
+LOCAL_MODEL_PORT: 1234 # Port where LM Studio is running
+LOCAL_MODEL_ID: mistral-nemo-instruct-2407 # The model ID for the local model
 
 ALLOW_DM: true # Set to true to allow direct messages
 SMART_MENTION: true # Set to true to enable smart mention feature
 
-MODEL_ID: mixtral-8x7b-32768 # Model used for chat completion
+MODEL_ID: mixtral-8x7b-32768 # Model used for chat completion (for remote API)
 
 MAX_HISTORY: 8 # Set the maximum message history
 
@@ -14,7 +20,7 @@ AI_NSFW_CONTENT_FILTER: true # Enable NSFW AI detector to detect NSFW prompt on 
 
 LANGUAGE: en # Specify the language code (check 'lang' folder for valid codes)
 
-DEFAULT_INSTRUCTION: assist # Specify the instruction prompt to use (check 'instructions' folder for valid prompts)
+DEFAULT_INSTRUCTION: hand # Specify the instruction prompt to use (check 'instructions' folder for valid prompts)
 # To add custom prompts, create a .txt file like 'custom.txt' in `instructions` folder and set INSTRUCTIONS as 'custom'
 
 Discord: https://discord.gg/6MT3CZauT8
@@ -34,7 +40,7 @@ DISABLE_PRESENCE: false
 PRESENCES:
   - How can I assist you?
   - Currently in {guild_count} guilds
-  - Support at https://discord.gg/6MT3CZauT8
+  - Support at Sanctum Sanctorum
 # List of different presences to be used
 
 
