Refactor configuration and enhance AI capabilities
- Updated API_BASE_URL in config.yml to remove trailing slash for consistency.
- Changed USE_LOCAL_MODEL setting in config.yml to false and updated LOCAL_MODEL_HOST.
- Updated MODEL_ID in config.yml to use a new model for chat completions.
- Added TAVILY_API_KEY to example.env for optional enhanced search capabilities.
- Improved error handling and streaming response functionality in ai_utils.py.
- Enhanced user preferences management in ChatConfigCog.py to include streaming response settings.
- Updated README.md to reflect new features and commands related to agent capabilities and streaming responses.
- Improved message processing in on_message.py to support streaming responses and user preferences.
- Added REGEXP function to fallback_utils.py for advanced pattern matching in fallback responses.

--- a/config.yml
+++ b/config.yml
@@ -1,17 +1,17 @@
-API_BASE_URL: https://api.groq.com/openai/v1/
+API_BASE_URL: https://api.groq.com/openai/v1
 INTERNET_ACCESS: true # Set to true to enable internet access
 MAX_SEARCH_RESULTS: 6 # Set the maximum search results for internet access DONT SET TOO HIGH
 
 # Local LM Studio model settings
-USE_LOCAL_MODEL: true # Set to true to use local LM Studio model instead of remote API
-LOCAL_MODEL_HOST: 172.29.160.1 # Direct IP address of Windows host running LM Studio
+USE_LOCAL_MODEL: false # Set to true to use local LM Studio model instead of remote API
+LOCAL_MODEL_HOST: 192.168.0.104 # Direct IP address of Windows host running LM Studio
 LOCAL_MODEL_PORT: 1234 # Port where LM Studio is running
 LOCAL_MODEL_ID: mistral-nemo-instruct-2407 # The model ID for the local model
 
 ALLOW_DM: true # Set to true to allow direct messages
 SMART_MENTION: true # Set to true to enable smart mention feature
 
-MODEL_ID: mixtral-8x7b-32768 # Model used for chat completion (for remote API)
+MODEL_ID: meta-llama/llama-4-scout-17b-16e-instruct # Model used for chat completion (for remote API)
 
 MAX_HISTORY: 8 # Set the maximum message history
 
