--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 aiohttp
-discord.py
+discord.py>=2.0.1
 discord.py[voice]
-gtts
-langdetect
-python-dotenv
+gtts>=2.5.0
+langdetect>=1.0.9
+python-dotenv>=0.21.0
 pyttsx3
-PyYAML
+PyYAML>=6.0.1
 Requests
-openai
-duckduckgo-search
+openai>=1.11.1
+duckduckgo-search>=4.1.1
+requests>=2.31.0
+groq>=0.4.1
+# Agent dependencies
+langchain>=0.3.25
+langchain-groq>=0.3.2
+langchain-community>=0.3.24
+langchain-core>=0.3.59
