--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ LOCAL_MODEL_ID: mistral-nemo-instruct-2407 # The model ID for the local model
 ALLOW_DM: true # Set to true to allow direct messages
 SMART_MENTION: true # Set to true to enable smart mention feature
 
-MODEL_ID: meta-llama/llama-4-scout-17b-16e-instruct # Model used for chat completion (for remote API)
+MODEL_ID: meta-llama/llama-4-maverick-17b-128e-instruct # Model used for chat completion (for remote API)
 
 MAX_HISTORY: 8 # Set the maximum message history
 
@@ -22,9 +22,6 @@ LANGUAGE: en # Specify the language code (check 'lang' folder for valid codes)
 
 DEFAULT_INSTRUCTION: hand # Specify the instruction prompt to use (check 'instructions' folder for valid prompts)
 # To add custom prompts, create a .txt file like 'custom.txt' in `instructions` folder and set INSTRUCTIONS as 'custom'
-
-Discord: https://discord.gg/6MT3CZauT8
-Github: https://github.com/mishalhossin/Discord-AI-Chatbot
 
 TRIGGER:
   - chatbot
@@ -40,7 +37,7 @@ DISABLE_PRESENCE: false
 PRESENCES:
   - How can I assist you?
   - Currently in {guild_count} guilds
-  - Support at Sanctum Sanctorum
+  - Support at Paws
 # List of different presences to be used
 
 
