Update README.md and enhance bot functionality
- Revamped README.md to provide a clearer overview of features, commands, and installation instructions.
- Added multi-language support and improved user experience with customizable preferences.
- Introduced new image generation capabilities and enhanced agent system functionalities.
- Updated requirements.txt to include beautifulsoup4 for improved web scraping.
- Removed outdated test files to streamline the codebase.
- Enhanced error handling and performance optimizations in bot utilities for better reliability.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ requests>=2.31.0
 openai>=1.11.1
 duckduckgo-search>=4.1.1
 groq>=0.4.1
+beautifulsoup4>=4.12.2
 
 # Agent dependencies
 langchain>=0.3.25
