Enhance bot capabilities and update documentation
- Added new components for voice message transcription, sentiment analysis, and fun reaction GIF commands in COMPONENTS.md.
- Updated configuration in config.yml to include new bot triggers and API keys for enhanced functionality.
- Improved README.md with detailed descriptions of new audio, voice, and analytical features.
- Refined requirements.txt to ensure compatibility with Python versions and added new dependencies.
- Enhanced user activity monitoring and command logging in monitoring.py for better performance tracking.
- Improved image processing and analysis capabilities in multimodal_utils.py, including advanced error handling for Discord image downloads.
- Updated on_message.py to support new multimodal features and improved intent detection for user commands.

--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
 DISCORD_TOKEN=YOUR_DISCORD_BOT_TOKEN
 API_KEY=YOUR_GROQ_API_KEY
-TAVILY_API_KEY=YOUR_TAVILY_API_KEY_OPTIONAL
+TAVILY_API_KEY=your-tavily-api-key
+# Search API keys for enhanced sequential thinking
+SERPER_API_KEY=your-serper-api-key
