--- a/config.yml
+++ b/config.yml
@@ -24,11 +24,12 @@ DEFAULT_INSTRUCTION: hand # Specify the instruction prompt to use (check 'instru
 # To add custom prompts, create a .txt file like 'custom.txt' in `instructions` folder and set INSTRUCTIONS as 'custom'
 
 TRIGGER:
+  - %BOT_NAME%
+  - %BOT_NICKNAME%
+  - %BOT_USERNAME%
   - chatbot
-  - bot nickname
-  - bot alias
-  - bot name
-  - Other bot alias...
+  - assistant
+  - ai
 # Define the triggers that the bot should always respond to when in message
 
 AUTO_SHARDING: true
