--- a/config.yml
+++ b/config.yml
@@ -24,9 +24,9 @@ DEFAULT_INSTRUCTION: hand # Specify the instruction prompt to use (check 'instru
 # To add custom prompts, create a .txt file like 'custom.txt' in `instructions` folder and set INSTRUCTIONS as 'custom'
 
 TRIGGER:
-  - %BOT_NAME%
-  - %BOT_NICKNAME%
-  - %BOT_USERNAME%
+  - "%BOT_NAME%"
+  - "%BOT_NICKNAME%"
+  - "%BOT_USERNAME%"
   - chatbot
   - assistant
   - ai
@@ -54,3 +54,6 @@ BLACKLIST_WORDS:
   - erotic
   
 # Blacklisted words for /Imagine command this is disabled if you enable AI_NSFW_CONTENT_FILTER
+
+# Bot owner configuration
+BOT_OWNER: "818806194608013313" # Bot owner's Discord ID (Paws)
