Enhance bot functionality and improve code structure
- Updated checklist.md with new enhancements and improvements for message handling and router capabilities.
- Modified config.yml to introduce new model IDs for chat completion and ensure proper formatting.
- Improved main.py to enhance bot initialization and error handling during startup.
- Refactored event handling in on_ready.py to initialize the router for better message processing.
- Enhanced message processing in on_message.py to integrate new reasoning methods and improve response generation.
- Added advanced tuple parsing and error handling in response formatting for cleaner user interactions.
- Updated README.md to reflect the new architecture and features for better user guidance.

--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,8 @@ LOCAL_MODEL_ID: mistral-nemo-instruct-2407 # The model ID for the local model
 ALLOW_DM: true # Set to true to allow direct messages
 SMART_MENTION: true # Set to true to enable smart mention feature
 
-MODEL_ID: meta-llama/llama-4-maverick-17b-128e-instruct # Model used for chat completion (for remote API)
+MODEL_ID1: compound-beta
+MODEL_ID2:  # Model used for chat completion (for remote API)
 
 MAX_HISTORY: 8 # Set the maximum message history
 
