--- a/config.yml
+++ b/config.yml
@@ -24,9 +24,9 @@ DEFAULT_INSTRUCTION: hand # Specify the instruction prompt to use (check 'instru
 # To add custom prompts, create a .txt file like 'custom.txt' in `instructions` folder and set INSTRUCTIONS as 'custom'
 
 TRIGGER:
-  - %BOT_NAME%
-  - %BOT_NICKNAME%
-  - %BOT_USERNAME%
+  - "%BOT_NAME%"
+  - "%BOT_NICKNAME%"
+  - "%BOT_USERNAME%"
   - chatbot
   - assistant
   - ai
